--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,18 @@ server.config
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+
+# Android Studio
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+
+/*/out
+/*/*/build
+/*/*/production
+*.iws
+*.ipr
+*~
+*.swp
