Login Session is added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+
+    }
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "com.example.user.foodforthought"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -24,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/Parse-1.8.2.jar')
     compile 'com.parse.bolts:bolts-android:1.+'
+    compile project(':linkedin-sdk')
 }
