The program now can retrieve the access token from linkedin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,21 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        sdkTest {
+            storeFile file("debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+
+        release {
+            storeFile file("debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
