--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".FullProfileActivity"
@@ -29,14 +28,22 @@
             android:label="@string/title_activity_login"
             android:parentActivityName=".MainActivity"
             android:theme="@style/FullscreenTheme" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.user.foodforthought.MainActivity" />
+        </activity>
+        <activity
+            android:name=".DebugDirectoryActivity"
+            android:label="@string/title_activity_debug_directory" >
+        </activity>
+        <activity
+            android:name=".LauncherActivity"
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_launcher">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
