--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,21 @@
         </activity>
         <activity
             android:name=".LauncherActivity"
-            android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher_cup">
+            android:icon="@drawable/ic_launcher_cup"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ChatApplicationActivity"
+            android:label="@string/title_activity_chat_application"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.user.foodforthought.MainActivity" />
         </activity>
     </application>
 
