--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.user.foodforthought.MainActivity" />
         </activity>
+        <activity
+            android:name=".MatchesListActivity"
+            android:label="@string/title_activity_matches_list"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.user.foodforthought.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
